# ChangeLog for app-arch/lzma-utils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/lzma-utils/ChangeLog,v 1.34 2008/05/31 07:56:43 vapier Exp $

*lzma-utils-4.32.6 (31 May 2008)

  31 May 2008; Mike Frysinger <vapier@gentoo.org> +lzma-utils-4.32.6.ebuild:
  Version bump #223983.

  10 May 2008; Mike Frysinger <vapier@gentoo.org> files/lzma-nocxx.sh:
  Handle just -d in wrapper script as this is how tar calls it #220899 by
  Ulrich Müller.

  10 May 2008; Mike Frysinger <vapier@gentoo.org> +files/lzma-nocxx.sh,
  lzma-utils-4.32.5.ebuild:
  If building with USE=nocxx, neuter lzma-utils to only provide decompressor
  #220899 by Ulrich Müller.

  03 Apr 2008; Raúl Porcel <armin76@gentoo.org> lzma-utils-4.32.5.ebuild:
  Add ~sparc-fbsd

  22 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  lzma-utils-4.32.5.ebuild:
  amd64 stable

  15 Mar 2008; nixnut <nixnut@gentoo.org> lzma-utils-4.32.5.ebuild:
  Stable on ppc wrt bug 213041

  14 Mar 2008; Brent Baude <ranger@gentoo.org> lzma-utils-4.32.5.ebuild:
  stable ppc64, bug 213041

  14 Mar 2008; Jeroen Roovers <jer@gentoo.org> lzma-utils-4.32.5.ebuild:
  Stable for HPPA (bug #213041).

  11 Mar 2008; Raúl Porcel <armin76@gentoo.org> lzma-utils-4.32.5.ebuild:
  alpha/ia64/sparc/x86 stable

  07 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  lzma-utils-4.32.4.ebuild:
  amd64 stable

  06 Mar 2008; Jeroen Roovers <jer@gentoo.org> lzma-utils-4.32.4.ebuild:
  Stable for HPPA too.

*lzma-utils-4.32.5 (11 Feb 2008)

  11 Feb 2008; Mike Frysinger <vapier@gentoo.org> +lzma-utils-4.32.5.ebuild:
  Version bump #209652.

  11 Feb 2008; Raúl Porcel <armin76@gentoo.org> lzma-utils-4.32.4.ebuild:
  alpha/ia64/sparc/x86 stable

  10 Feb 2008; Alexis Ballier <aballier@gentoo.org>
  lzma-utils-4.32.4.ebuild:
  keyword ~x86-fbsd

  26 Jan 2008; Samuli Suominen <drac@gentoo.org> lzma-utils-4.32.3.ebuild:
  amd64 stable wrt #205397
