@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/lzma-utils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/lzma-utils/ChangeLog,v 1.34 2008/05/31 07:56:43 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/lzma-utils/ChangeLog,v 1.35 2008/06/21 04:25:19 vapier Exp $
+
+  21 Jun 2008; Mike Frysinger <vapier@gentoo.org> lzma-utils-4.32.6.ebuild:
+  Block older p7zip to force smooth upgrade #228113 by Andrey Kislyuk.
 
 *lzma-utils-4.32.6 (31 May 2008)
 
